# TinyFlap

./: LICENSE  README.md  flappy.py  pyproject.toml
